objects/Income_Card_Payment__c.object
<CustomObject>
    <description>Smarter Pay - Card Payment Detail</description>
    <fields>
        <fullName>Authorisation_Code__c</fullName>
        <label>Authorisation Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorisation_Date__c</fullName>
        <label>Authorisation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bank_Notes__c</fullName>
        <label>Payment Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Card_Expiry_Date__c</fullName>
        <label>Card Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Number_Ending__c</fullName>
        <label>Card Number Ending</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Income_Card_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Payment_Description__c</fullName>
        <label>Customer Payment Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit Bank Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipName>Payment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Debit Detail</label>
        <referenceTo>Income_Direct_Debit__c</referenceTo>
        <relationshipName>Card_Payment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Payment_Amount__c</fullName>
        <label>First Payment Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Formula_Expiry_Date__c</fullName>
        <formula>Card_Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gateway_Customer_Reference__c</fullName>
        <label>Gateway Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalPay_Card_Ref__c</fullName>
        <label>GlobalPay Card Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalPay_Payer_Ref__c</fullName>
        <label>GlobalPay Payer Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Payment_Description__c</fullName>
        <label>Internal Payment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_On_Card__c</fullName>
        <label>Name On Card</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Card Payment Details</relationshipLabel>
        <relationshipName>Income_Card_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_Username__c</fullName>
        <label>Payment Gateway Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Is_From_Console_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Is From Console View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Reference__c</fullName>
        <label>Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status_Details__c</fullName>
        <label>Payment Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Vendor__c</fullName>
        <label>Payment Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Globalpay</fullName>
                </value>
                <value>
                    <fullName>SagePayPi</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
                <value>
                    <fullName>SagePay</fullName>
                    <isActive>false</isActive>
                    <label>SagePay</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Order__c</fullName>
        <label>Cheque Number / Postal Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Amount__c</fullName>
        <label>RP Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RP_Collection_Day__c</fullName>
        <label>RP Collection Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RP_Description__c</fullName>
        <label>RP Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RP Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RP_End_Date__c</fullName>
        <description>The date after which no further Repeat Payment will be taken</description>
        <inlineHelpText>Date after which no further Repeat Payments will be taken, blank means for ever.</inlineHelpText>
        <label>RP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RP_Frequency__c</fullName>
        <label>RP Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RP_Next_Payment_Date__c</fullName>
        <label>RP Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RP_Start_Date__c</fullName>
        <label>RP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RP_Stretch__c</fullName>
        <label>RP Stretch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Card Payment Details</relationshipLabel>
        <relationshipName>Card_Payment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sagepay_Security_Key__c</fullName>
        <label>Sagepay Security Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Card_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Card Payment</label>
        <referenceTo>Income_Card_Payment__c</referenceTo>
        <relationshipLabel>Card Payment Details</relationshipLabel>
        <relationshipName>Card_Payment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standing_Order__c</fullName>
        <label>Standing Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Donation_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surcharge_Amount__c</fullName>
        <label>Surcharge Amount</label>
        <summarizedField>Income_Card_Payment_History__c.Surcharge_Amount__c</summarizedField>
        <summaryForeignKey>Income_Card_Payment_History__c.Income_Card_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Amount_To_Take__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Amount To Take</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Billing_Address__c</fullName>
        <formula>Opportunity__r.Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Billing_City__c</fullName>
        <formula>Opportunity__r.Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Billing_CountryCode__c</fullName>
        <formula>Opportunity__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Billing CountryCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Billing_Email__c</fullName>
        <formula>Opportunity__r.Account.Billing_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Billing Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Billing_Firstname__c</fullName>
        <formula>Opportunity__r.Account.Billing_Firstname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Billing Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Billing_Postcode__c</fullName>
        <formula>Opportunity__r.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Billing Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Billing_State__c</fullName>
        <formula>Opportunity__r.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Billing_Surname__c</fullName>
        <formula>Opportunity__r.Account.Billing_Surname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Billing Surname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Delivery_Address__c</fullName>
        <formula>Opportunity__r.Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Delivery_City__c</fullName>
        <formula>Opportunity__r.Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Delivery City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Delivery_Country__c</fullName>
        <formula>Opportunity__r.Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Delivery Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Delivery_Firstname__c</fullName>
        <formula>Opportunity__r.Account.Billing_Firstname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Delivery Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Delivery_Postcode__c</fullName>
        <formula>Opportunity__r.Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Delivery Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Delivery_State__c</fullName>
        <formula>Opportunity__r.Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Delivery State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Hidden_Delivery_Surname__c</fullName>
        <formula>Opportunity__r.Account.Billing_Surname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Token Hidden Delivery Surname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Refunded__c</fullName>
        <label>Total Amount Refunded</label>
        <summarizedField>Income_Card_Payment_History__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Income_Card_Payment_History__c.Payment_Status__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Income_Card_Payment_History__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Refund</value>
        </summaryFilterItems>
        <summaryForeignKey>Income_Card_Payment_History__c.Income_Card_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Taken__c</fullName>
        <label>Total Amount Taken</label>
        <summarizedField>Income_Card_Payment_History__c.Credit_Amount__c</summarizedField>
        <summaryForeignKey>Income_Card_Payment_History__c.Income_Card_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Source__c</fullName>
        <label>Transaction Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MOTO</fullName>
                </value>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>DeferredEcommerce</fullName>
                </value>
                <value>
                    <fullName>DeferredMOTO</fullName>
                </value>
                <value>
                    <fullName>AuthenticateAuthoriseEcommerce</fullName>
                </value>
                <value>
                    <fullName>AuthenticateAuthoriseMOTO</fullName>
                </value>
                <value>
                    <fullName>CAF</fullName>
                </value>
                <value>
                    <fullName>Benevity</fullName>
                </value>
                <value>
                    <fullName>LaunchGood</fullName>
                </value>
                <value>
                    <fullName>Give Brite</fullName>
                </value>
                <value>
                    <fullName>JustGiving</fullName>
                </value>
                <value>
                    <fullName>Everydayhero</fullName>
                </value>
                <value>
                    <fullName>Muslim Giving</fullName>
                </value>
                <value>
                    <fullName>Ramadan Giving</fullName>
                </value>
                <value>
                    <fullName>Facebook Giving</fullName>
                </value>
                <value>
                    <fullName>VirginMoney Giving</fullName>
                </value>
                <value>
                    <fullName>Charities Trust</fullName>
                </value>
                <value>
                    <fullName>GAYE</fullName>
                </value>
                <value>
                    <fullName>In Kind</fullName>
                </value>
                <value>
                    <fullName>Standing Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Full Refund</fullName>
                </value>
                <value>
                    <fullName>Partial Refund</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Deferred_Released</fullName>
                    <label>Deferred Released</label>
                </value>
                <value>
                    <fullName>Deferred_Aborted</fullName>
                    <label>Deferred Aborted</label>
                </value>
                <value>
                    <fullName>Authenticate</fullName>
                </value>
                <value>
                    <fullName>Authorised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Card Payment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Gateway_Customer_Reference__c</columns>
        <columns>Payment_Status_Details__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Total_Amount_Taken__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Income_Card_Payment__c.Card_Payment</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Repeat_Payments</fullName>
        <columns>NAME</columns>
        <columns>Card_Number_Ending__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>RP_Next_Payment_Date__c</columns>
        <columns>RP_Amount__c</columns>
        <columns>RP_Description__c</columns>
        <columns>RP_Enabled__c</columns>
        <columns>RP_Frequency__c</columns>
        <columns>RP_Stretch__c</columns>
        <columns>RP_Start_Date__c</columns>
        <columns>Total_Amount_Taken__c</columns>
        <columns>RP_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RP_Enabled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Repeat Payments</label>
    </listViews>
    <nameField>
        <displayFormat>HUAPP-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Card Payment Details</pluralLabel>
    <recordTypes>
        <fullName>Card_Payment</fullName>
        <active>true</active>
        <label>Card Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Paypal</fullName>
        <active>true</active>
        <description>Paypal Payments</description>
        <label>Paypal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>